wip(curriculum): fix weird spacing in nested lists

--- a/client/src/curriculum/module.scss
+++ b/client/src/curriculum/module.scss
@@ -128,6 +128,11 @@
     ul {
       margin: 1rem 0 2rem;
       padding-left: 2rem;
+
+      ol,
+      ul {
+        margin: 0;
+      }
     }
 
     li {
